# pay-service

./: .coveragerc  README.md  alembic.ini  cli.py  docker-compose.yml  dockerfile  makefile  prometheus.yml  pyproject.toml  pytest.ini  second_task.md  settings.toml
alembic/: env.py
alembic/versions/: 312bd01b4d59_initial_migration.py
app/: app.py  config.py  db.py  enums.py  exceptions.py  logger.py  main.py
app/api/: companies_api.py  misc_api.py  payments_api.py  routes.py
app/clients/: base_payment_client.py
app/clients/prometheus/: client.py
app/models/: base_model.py  companies_model.py  payments_model.py
app/repositories/: base_repo.py  company_repo.py  payment_repo.py
app/schemas/: company_schemas.py  misc_schemas.py  payment_schemas.py
app/services/: company_service.py  payment_service.py
tests/: conftest.py
tests/api/: test_company_api.py
tests/repositories/: test_company_repo.py  test_payment_repo.py
