[tool.poetry]
name = "pay-service"
version = "0.1.0"
description = ""
authors = ["Gleb <gleb.pekhov@inplatlabs.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
alembic = "^1.13.3"
sqlalchemy = "^2.0.36"
ruff = "^0.7.1"
mypy = "^1.13.0"
dynaconf = "^3.2.6"
asyncpg = "^0.30.0"
uvicorn = "^0.32.0"
typer = "^0.12.5"
structlog = "^24.4.0"
greenlet = "^3.1.1"
pytest = "^8.3.4"
testcontainers = "^4.8.2"
pytest-asyncio = "^0.24.0"
prometheus-client = "^0.21.1"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
